@@ -1,3 +1,8 @@
+2008-09-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * tests/util.[ch]
+    Add function print_cpu_name.
+
 2008-09-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * configure.ac
